--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.21
+ - Add "Name" section to the pod
+ - Remove 'Makefile.old' from the source. (Doh !!)
 0.20
  - First CPAN release
  - No longer assign Exporter and DynaLoader to @Math::GMPz::ISA.
