--- a/README
+++ b/README
@@ -21,3 +21,44 @@ then instead of running 'perl Makefile.PL', you'll need to run:
 
 perl Makefile.pl INC="-I/path/to/gmp_include" LIBS="-L/path/to/gmp_lib -lgmp"
 
+==============
+64-bit support
+==============
+
+If your perl's Config reports that 'use64bitint' is defined, or that
+'use64bitall' is defined, or that 'usemorebits' is defined, or that
+'ivsize' is 8, then Math::GMPz will, by default, be built to enable
+you to use the 64-bit long long int values with the new() function
+and the overloaded operators. Else attempts to use long long int
+values with Math::GMPz will probably fail. If necessary, you can 
+override the default by opening up the Makefile.PL and uncommenting
+the appropriate line (just a few lines down from the top of the file
+ ... the comments in that file should make it clear).
+
+Similarly, if your perl's Config reports that 'uselongdouble' is 
+defined, or that 'usemorebits' is defined, or that 'dblsize' > 8,
+then Math::GMPz will, by default, be built to enable you to use the
+long double values with the new() function and the overloaded
+operators. Else, attempts to use long doubles will probably fail.
+If you need, you can override the default by opening up the 
+Makefile.PL and uncommenting the appropriate line (just a few lines
+down from the top of the file ... the comments in that file should
+make it clear).
+
+I believe it to be both unnecessary and inadvisable to override the 
+default - but if you do find that you need to override the default, 
+please let me know. That you have found it necessary to override the
+default is something I probably ought to know about.
+
+I am contactable by email at sisyphus at(@) cpan dot (.) org.
+
+==========
+MS WINDOWS
+==========
+If building with an MSVC++ compiler against a MinGW-built gmp lib, you'll
+need to additionally link to MinGW's libgcc.a and libcoldname.a. First,
+create copies of the 3 '.a' files (named libgmp.lib, libgcc.lib, and
+libcoldname.lib) and then run:
+
+perl Makefile.pl INC="-IC:/path/to/gmp_include" LIBS="-LC:/path/to/gcc_lib -lgcc -LC:/path/to/coldname_lib -lcoldname -L/path/to/gmp_lib -lgmp"
+
