--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,17 @@
+0.24
+ - Add TRmpz_out_str and TRmpz_inp_str.
+ - Rmpz_out_str now takes an optional (leading) string argument - a
+   string that will be prepended to the mpz_out_str() output.
+ - Remove the tests in the Makefile.PL that test for the presence of
+   a suitable compiler and GMP library.
+ - Remove the "homegrown" primes and supplementary functions from the 
+   list of exportable functions. (They don't really belong here.) Also
+   remove the documentation pertaining to these functions from the POD.
+   This is done in preparation for the eventual removal of these 
+   functions from Math::GMPz. For the time being, however, these
+   functions are still available via theor fully-qualified names - and
+   they're still being tested in the test suite.
+
 0.22 
  - Rewrite new()
  - Rmpz_out_str() now takes an optional third argument - a string that
