--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.26
+ - Add Rmpz_fprintf, Rmpz_sprintf and Rmpz_sprintf_ret.
+ - Add Rmpz_out_raw and Rmpz_inp_raw.
 0.24
  - Add TRmpz_out_str and TRmpz_inp_str.
  - Rmpz_out_str now takes an optional (leading) string argument - a
@@ -9,7 +12,7 @@
    remove the documentation pertaining to these functions from the POD.
    This is done in preparation for the eventual removal of these 
    functions from Math::GMPz. For the time being, however, these
-   functions are still available via theor fully-qualified names - and
+   functions are still available via their fully-qualified names - and
    they're still being tested in the test suite.
 
 0.22 
