Import of SISYPHUS/Math-GMPz-0.29 from CPAN.
gitpan-cpan-distribution: Math-GMPz
gitpan-cpan-version:      0.29
gitpan-cpan-path:         SISYPHUS/Math-GMPz-0.29.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+0.29
+ - Add proper coverage of random functions
+ - Add Rmpz_snprintf and Rmpz_snprintf_ret
+ - If there's no variable to be formatted, Rmpz_(f/s)printf no longer
+   need to be supplied with a dummy variable.
+ - Some buggy tests in printf.t hopefully fixed.
+
 0.28
  Requires gmp-4.2.0 or later.
  In response to bug http://rt.cpan.org/Ticket/Display.html?id=46499:
