--- a/README
+++ b/README
@@ -28,9 +28,8 @@ perl Makefile.PL INC="-I/path/to/gmp_include" LIBS="-L/path/to/gmp_lib -lgmp"
 64-bit support
 ==============
 
-If your perl's Config reports that 'use64bitint' is defined, or that
-'use64bitall' is defined, or that 'usemorebits' is defined, or that
-'ivsize' is 8, then Math::GMPz will, by default, be built to enable
+If your perl's Config reports that 'ivsize' is greater than or
+equal to 8, then Math::GMPz will, by default, be built to enable
 you to use the 64-bit long long int values with the new() function
 and the overloaded operators. Else attempts to use long long int
 values with Math::GMPz will probably fail. If necessary, you can 
@@ -38,8 +37,7 @@ override the default by opening up the Makefile.PL and uncommenting
 the appropriate line (just a few lines down from the top of the file
  ... the comments in that file should make it clear).
 
-Similarly, if your perl's Config reports that 'uselongdouble' is 
-defined, or that 'usemorebits' is defined, or that 'dblsize' > 8,
+Similarly, if your perl's Config reports that 'nvsize' > 8,
 then Math::GMPz will, by default, be built to enable you to use the
 long double values with the new() function and the overloaded
 operators. Else, attempts to use long doubles will probably fail.
