Import of SISYPHUS/Math-GMPz-0.31 from CPAN.
gitpan-cpan-distribution: Math-GMPz
gitpan-cpan-version:      0.31
gitpan-cpan-path:         SISYPHUS/Math-GMPz-0.31.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.31
+ - Fix Random.xs so that it compiles with gmp-4 (not just gmp-5).
+   Thanks Rob Kuo (https://rt.cpan.org/Ticket/Display.html?id=58501)
+
 0.29
  - Add proper coverage of random functions
  - Add Rmpz_snprintf and Rmpz_snprintf_ret
