Import of SISYPHUS/Math-GMPz-0.32 from CPAN.
gitpan-cpan-distribution: Math-GMPz
gitpan-cpan-version:      0.32
gitpan-cpan-path:         SISYPHUS/Math-GMPz-0.32.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+0.32
+ - Add Rmpz_powm_sec (gmp-5 only, and not available when building against mpir).
+ - In the documentation, elaborate on the way that Math::GMPz::get_v() and 
+   __GNU_MP_VERSION & friends determine their values. (Thanks Vincent Lefevre.)
+ - Add Rmpz_div, Rmpz_divmod, Rmpz_div_ui, Rmpz_divmod_ui,
+   Rmpz_div_2exp and Rmpz_mod_2exp.
+
 0.31
  - Fix Random.xs so that it compiles with gmp-4 (not just gmp-5).
    Thanks Rob Kuo (https://rt.cpan.org/Ticket/Display.html?id=58501)
