Import of SISYPHUS/Math-GMPz-0.34 from CPAN.
gitpan-cpan-distribution: Math-GMPz
gitpan-cpan-version:      0.34
gitpan-cpan-path:         SISYPHUS/Math-GMPz-0.34.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.34
+ - Fix error in Rmpz_gcd_ui. (Should've been returning SV*. Thanks Dana Jacobsen.)
+ - Create the NULL mpz_t ($Math::GMPz::NULL)
+
 0.33
  - Remove 'not' from overloads. Apparently achieved nothing anyway, and 5.16
    warns that it's invalid.
