Import of SISYPHUS/Math-GMPz-0.35 from CPAN.
gitpan-cpan-distribution: Math-GMPz
gitpan-cpan-version:      0.35
gitpan-cpan-path:         SISYPHUS/Math-GMPz-0.35.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.35
+ - Add Math::GMPz::V
+ - Add cross-class overloading (with Math::MPFR objects only).
+
 0.34
  - Fix error in Rmpz_gcd_ui. (Should've been returning SV*. Thanks Dana Jacobsen.)
  - Create the NULL mpz_t ($Math::GMPz::NULL)
