Import of SISYPHUS/Math-GMPz-0.36 from CPAN.
gitpan-cpan-distribution: Math-GMPz
gitpan-cpan-version:      0.36
gitpan-cpan-path:         SISYPHUS/Math-GMPz-0.36.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.36
+ - Add Rmpz_2fac_ui, Rmpz_mfac_uiui and Rmpz_primorial_ui (all new in gmp-5.1.0).
+
 0.35
  - Add Math::GMPz::V
  - Add cross-class overloading (with Math::MPFR objects only).
